fixed b2b logic, now finally!